# pytorch_benchmark

./: .flake8  .gitignore  benchmarkmaker.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  workflow.yml
BenchmarkMaker/: __init__.py  benchmarkmaker.py
benchmarkmaker/: llm.py  vision.py
test/: test_languagebenchmarks.py  test_visionbenchmarks.py
